--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 ./DH.xcodeproj/project.xcworkspace/xcuserdata
+./DH/DH.xcodeproj/project.xcworkspace/xcuserdata
 ./DH/DH.xcodeproj/xcuserdata
-./DH.xcodeproj/xcuserdata/
+./DH.xcodeproj/xcuserdata
+./SearchTTT/SearchTTT.xcodeproj/project.xcworkspace/xcuserdata
+./URLEncode/URLEncode/URLEncode.xcodeproj/project.xcworkspace/xcuserdata
+./URLEncode/URLEncode/URLEncode.xcodeproj/xcuserdata
+./SearchTTT/SearchTTT.xcodeproj/xcuserdata
 .DS_Store
 
