--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,7 @@
 ./URLEncode/URLEncode/URLEncode.xcodeproj/project.xcworkspace/xcuserdata
 ./URLEncode/URLEncode/URLEncode.xcodeproj/xcuserdata
 ./SearchTTT/SearchTTT.xcodeproj/xcuserdata
+./ASyncLabel/ImageMagick.xcodeproj/project.xcworkspace/xcuserdata
+./ASyncLabel/ImageMagick.xcodeproj/xcuserdata
 .DS_Store
 
