--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 ./DH/DH.xcodeproj/xcuserdata
 ./DH.xcodeproj/xcuserdata
 ./SearchTTT/SearchTTT.xcodeproj/project.xcworkspace/xcuserdata
+./SearchTTT/SearchTTT.xcodeproj/xcuserdata
 ./URLEncode/URLEncode/URLEncode.xcodeproj/project.xcworkspace/xcuserdata
 ./URLEncode/URLEncode/URLEncode.xcodeproj/xcuserdata
 ./SearchTTT/SearchTTT.xcodeproj/xcuserdata
