--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
-./DH.xcodeproj/project.xcworkspace/xcuserdata
-./DH/DH.xcodeproj/project.xcworkspace/xcuserdata
-./DH/DH.xcodeproj/xcuserdata
-./DH.xcodeproj/xcuserdata
-./SearchTTT/SearchTTT.xcodeproj/project.xcworkspace/xcuserdata
-./SearchTTT/SearchTTT.xcodeproj/xcuserdata
-./URLEncode/URLEncode/URLEncode.xcodeproj/project.xcworkspace/xcuserdata
-./URLEncode/URLEncode/URLEncode.xcodeproj/xcuserdata
-./SearchTTT/SearchTTT.xcodeproj/xcuserdata
-./ASyncLabel/ImageMagick.xcodeproj/project.xcworkspace/xcuserdata
-./ASyncLabel/ImageMagick.xcodeproj/xcuserdata
+DH.xcodeproj/project.xcworkspace/xcuserdata/
+DH/DH.xcodeproj/project.xcworkspace/xcuserdata/
+DH/DH.xcodeproj/xcuserdata/
+DH.xcodeproj/xcuserdata/
+SearchTTT/SearchTTT.xcodeproj/project.xcworkspace/xcuserdata/
+SearchTTT/SearchTTT.xcodeproj/xcuserdata/
+URLEncode/URLEncode/URLEncode.xcodeproj/project.xcworkspace/xcuserdata/
+URLEncode/URLEncode/URLEncode.xcodeproj/xcuserdata/
+SearchTTT/SearchTTT.xcodeproj/xcuserdata/
+ASyncLabel/ImageMagick.xcodeproj/project.xcworkspace/xcuserdata/
+ASyncLabel/ImageMagick.xcodeproj/xcuserdata/
 .DS_Store
 
