--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,7 @@ URLEncode/URLEncode/URLEncode.xcodeproj/xcuserdata/
 SearchTTT/SearchTTT.xcodeproj/xcuserdata/
 ASyncLabel/ImageMagick.xcodeproj/project.xcworkspace/xcuserdata/
 ASyncLabel/ImageMagick.xcodeproj/xcuserdata/
+ResizableImage/Test.xcodeproj/project.xcworkspace/xcshareddata/
+ResizableImage/Test.xcodeproj/xcuserdata/
 .DS_Store
 
