--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,6 @@ ASyncLabel/ImageMagick.xcodeproj/project.xcworkspace/xcuserdata/
 ASyncLabel/ImageMagick.xcodeproj/xcuserdata/
 ResizableImage/Test.xcodeproj/project.xcworkspace/xcshareddata/
 ResizableImage/Test.xcodeproj/xcuserdata/
+AVCompression/AVCompression.xcodeproj/xcuserdata/
 .DS_Store
 
