--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,6 @@ ASyncLabel/ImageMagick.xcodeproj/xcuserdata/
 ResizableImage/Test.xcodeproj/project.xcworkspace/xcshareddata/
 ResizableImage/Test.xcodeproj/xcuserdata/
 AVCompression/AVCompression.xcodeproj/xcuserdata/
+AVCompression/AVCompression.xcodeproj/project.xcworkspace/xcuserdata/
 .DS_Store
 
