--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,7 @@ ResizableImage/Test.xcodeproj/project.xcworkspace/xcshareddata/
 ResizableImage/Test.xcodeproj/xcuserdata/
 AVCompression/AVCompression.xcodeproj/xcuserdata/
 AVCompression/AVCompression.xcodeproj/project.xcworkspace/xcuserdata/
+CustomTransitions/CustomTransitions.xcodeproj/xcuserdata/
+PhotoTransitionApple/Photo Transitioning.xcodeproj/xcuserdata/
 .DS_Store
 
