--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ ResizableImage/Test.xcodeproj/xcuserdata/
 AVCompression/AVCompression.xcodeproj/xcuserdata/
 AVCompression/AVCompression.xcodeproj/project.xcworkspace/xcuserdata/
 CustomTransitions/CustomTransitions.xcodeproj/xcuserdata/
-PhotoTransitionApple/Photo Transitioning.xcodeproj/xcuserdata/
+PhotoTransitionApple/Photo\ Transitioning.xcodeproj/xcuserdata/
+PhotoTransitionApple/Photo\ Transitioning.xcodeproj/project.xcworkspace/xcuserdata/
 .DS_Store
 
