--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,6 @@ PhotoTransitionApple/Photo\ Transitioning.xcodeproj/project.xcworkspace/xcuserda
 MachineLearning/.ipynb_checkpoints/Numpy-checkpoint.ipynb
 MachineLearning/.ipynb_checkpoints/Numpy-operations-checkpoint.ipynb
 MachineLearning/Test/venv/
+ResponderChainInteraction/ResponderChainInteraction.xcodeproj/xcuserdata/
 .DS_Store
 
