--- a/.gitignore
+++ b/.gitignore
@@ -23,4 +23,4 @@ MachineLearning/.ipynb_checkpoints/Numpy-operations-checkpoint.ipynb
 MachineLearning/Test/venv/
 ResponderChainInteraction/ResponderChainInteraction.xcodeproj/xcuserdata/
 .DS_Store
-
+Pits/cgss/.idea/workspace.xml
