--- a/AudioEngine/AudioEngine/Info.plist
+++ b/AudioEngine/AudioEngine/Info.plist
@@ -39,6 +39,10 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>voip</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
